# inconfluential

./: .gitignore  README.md  inconfluential.py  pyproject.toml  test.py
